<?xml version="1.0" encoding="UTF-8"?>
<!--

    This project is dual-licensed under the terms of the Common Development and Distribution License (CDDL) v1.0 and the GNU General Public License (GPL) v2.0 with Classpath Exception.

    You may choose either license.

    See LICENSE-CDDL-1.0 and LICENSE-GPL-2.0-CE for full license texts.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>60</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.jaxws</groupId>
    <artifactId>jaxws-spring-parent</artifactId>
    <version>3.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jaxws-spring-parent</name>
    <description>Parent POM for Jaxws Spring</description>

    <licenses>
        <license>
            <name>GPL-2.0-only WITH Classpath-exception-2.0</name>
            <url>https://spdx.org/licenses/GPL-2.0-only.html</url>
            <distribution>repo</distribution>
            <comments>Classpath exception applies</comments>
        </license>
        <license>
            <name>CDDL-1.0</name>
            <url>https://spdx.org/licenses/CDDL-1.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>jaxws-spring</module>
        <module>jaxws-spring-sample</module>
        <module>jaxws-spring-sample-fromjava</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/hazendaz/jaxws-spring</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/jaxws-spring.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/jaxws-spring</url>
    </scm>

    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>gh-pages-scm</name>
            <url>scm:git:ssh://git@github.com/hazendaz/jaxws-spring.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>
        <javadoc.java.release.version>17</javadoc.java.release.version>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1768178295</project.build.outputTimestamp>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.jaxws.spring.parent</module.name>

        <!-- Disable topSiteURL -->
        <topSiteURL />
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.3.6</version>
            </dependency>
            <dependency>
                <groupId>jakarta.activation</groupId>
                <artifactId>jakarta.activation-api</artifactId>
                <version>2.1.4</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.5</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.angus</groupId>
                <artifactId>angus-activation</artifactId>
                <version>2.0.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
